# OpenAIglasses_for_Navigation

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  PROJECT_STRUCTURE.md  README.md  app_main.py  asr_core.py  audio_player.py  audio_stream.py  bridge_io.py  device_utils.py  models.py  navigation_master.py  ncnn_runtime.py  obstacle_detector_client.py  omni_client.py  pyproject.toml  qwen_extractor.py  setup.bat  setup.sh  standard_yolo_backend.py  sync_recorder.py  trafficlight_detection.py  utils.py  workflow_blindpath.py  workflow_crossstreet.py  yoloe_backend.py  yolomedia.py
compile/: .gitignore  AGENTS.md  compile.ino  platformio.ini
scripts/: export_ncnn_models.py
static/: AGENTS.md  main.js  visualizer.js
templates/: index.html
